Fix Twitter and Instagram embeds not showing (can be improved to remove the blink)

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -102,7 +102,6 @@
         align-items: center;
         iframe {
             max-width: 100% !important;
-            max-height: 30vh !important;
         }
         img {
             width: auto !important;
